@@ -15,3 +15,5 @@ dist-docs/pg_upgrade_internal.log
 dist-docs/pg_upgrade_server.log
 
 dist-docs/pg_upgrade_utility.log
+
+Samples/Sample_invoice/include_MySQL.php
