@@ -214,6 +214,8 @@ class DefinitionChecker
         ),
         'credit-including' => 'string',
         'theme' => 'string',
+        'app-locale' => 'string',
+        'app-currency' => 'string',
     );
     private
         $prohibitKeywordsForDataSource = array(
