@@ -58,12 +58,15 @@ class GenerateJSCode
         $oAuthRedirect = null;
         $themeName = "default";
         $dbClass = null;
+        $appLocale = null;
+        $appCurrency = null;
         $params = IMUtil::getFromParamsPHPFile(array(
             "generatedPrivateKey", "passPhrase", "browserCompatibility",
             "scriptPathPrefix", "scriptPathSuffix",
             "oAuthProvider", "oAuthClientID", "oAuthRedirect",
             "passwordPolicy", "documentRootPrefix", "dbClass",
             "nonSupportMessageId", "valuesForLocalContext", "themeName",
+            "appLocale", "appCurrency",
         ), true);
         $generatedPrivateKey = $params["generatedPrivateKey"];
         $passPhrase = $params["passPhrase"];
@@ -79,6 +82,8 @@ class GenerateJSCode
         $documentRootPrefix = is_null($params["documentRootPrefix"]) ? "" : $params["documentRootPrefix"];
         $valuesForLocalContext = $params["valuesForLocalContext"];
         $themeName = is_null($params["themeName"]) ? $themeName : $params["themeName"];
+        $appLocale = isset($options['app-locale']) ? $options['app-locale'] : $params["appLocale"];
+        $appCurrency = isset($options['app-currency']) ? $options['app-currency'] : $params["appCurrency"];
 
         /*
          * Read the JS programs regarding by the developing or deployed.
@@ -250,6 +255,15 @@ class GenerateJSCode
         } else {
             $this->generateAssignJS(
                 "INTERMediator.debugMode", ($debug === false) ? "false" : $debug);
+        }
+
+        if (!is_null($appLocale)) {
+            $this->generateAssignJS("INTERMediatorOnPage.appLocale", "{$q}{$appLocale}{$q}");
+            $this->generateAssignJS("INTERMediatorOnPage.localInfo",
+                "JSON.parse('".json_encode(IMLocaleFormatTable::getLocaleFormat($appLocale))."')");
+        }
+        if (!is_null($appCurrency)) {
+            $this->generateAssignJS("INTERMediatorOnPage.appCurrency", "{$q}{$appCurrency}{$q}");
         }
 
         // Check Authentication
