@@ -302,6 +302,22 @@ buster.testCase("INTER-Mediator Specific Calculation Test: ", {
         // A negative second parameter doesn't support so far.
     },
 
+    "each 3-digits should be devided with currency.": function () {
+        assert.equals(Parser.evaluate("currency(999, 0)"), "￥999");
+        assert.equals(Parser.evaluate("currency(1000, 0)"), "￥1,000");
+        assert.equals(Parser.evaluate("currency(999999, 0)"), "￥999,999");
+        assert.equals(Parser.evaluate("currency(1000000, 0)"), "￥1,000,000");
+        assert.equals(Parser.evaluate("currency(1000000.678, 1)"), "￥1,000,000.7");
+        assert.equals(Parser.evaluate("currency(1000000.678, 2)"), "￥1,000,000.68");
+        assert.equals(Parser.evaluate("currency(1000000.678, 3)"), "￥1,000,000.678");
+        assert.equals(Parser.evaluate("currency(1000000.678, 4)"), "￥1,000,000.6780");
+        assert.equals(Parser.evaluate("currency(-1000000.678, 1)"), "￥-1,000,000.7");
+        assert.equals(Parser.evaluate("currency(-1000000.678, 2)"), "￥-1,000,000.68");
+        assert.equals(Parser.evaluate("currency(-1000000.678, 3)"), "￥-1,000,000.678");
+        assert.equals(Parser.evaluate("currency(999999, -1)"), "￥1,000,000");
+        // A negative second parameter doesn't support so far.
+    },
+
     "String functions.": function () {
         assert.equals(Parser.evaluate("substr('abcdefg', 3, 2)"), "de");
         assert.equals(Parser.evaluate("substring('abcdefg', 3, 5)"), "de");
