@@ -688,6 +688,13 @@ var Parser = (function (scope) {
         return INTERMediatorLib.numberFormat(stra, strb);
     }
 
+    function currencyformat(val, digit) {
+        var stra, strb;
+        stra = (val instanceof Array) ? val.join() : val;
+        strb = (digit instanceof Array) ? digit.join() : digit;
+        return INTERMediatorLib.currencyFormat(stra, strb);
+    }
+
     function substr(str, pos, len) {
         var stra, p, l;
         if (str == null) {
@@ -1154,6 +1161,7 @@ var Parser = (function (scope) {
             'average': averagefunc,
             'list': listfunc,
             'format': numberformat,
+            'currency': currencyformat,
             'substr': substr,
             'substring': substring,
             'indexof': indexof,
