@@ -220,4 +220,9 @@ $uploadFilePathMode = "";
 //$accessControlAllowOrigin = "https://server.msyk.net";
 
 //$altThemePath = "/var/www/thmeme";    //Your original thmeme directory.
-//$themeName = "blackbird;      //Default theme name.
+//$themeName = "blackbird";      //Default theme name.
+
+// Server side locale for this application. This locale replaces the browser's accepting languages.
+//$appLocale = "ja_JP";   // Locale for application has to be specified the langunage_country code.
+//$appCurrency = "JP";    // Locale for currency has to be specified the country code.
+
