@@ -40,6 +40,8 @@ Ver.5.6 (in development)
 - Checking the result of voting for target specifications, and show error message if the context which is specified
   in target specifications in page file doesn't exist.
 - Locale feature was refactored to support intl module both existing and not.
+- Application Locale and Currency Locale are supprted. The option parameters in IM_Entry function can have
+  'app-locale' and 'app-currency' keyed values. The params.php file can have $appLocale and $appCurrency vars.
 - [BUG FIX] IMLibContext class's getDataAtLastRecord method had a bug (wrong parameters for getValue).
 - [BUG FIX] MediaAccess class didn't work for privileged access with users.
 - [BUG FIX] INTERMediator.partialConstructing property wasn't appropriate value in doAfterProcessing method.
